2009-09-23  Dan Fandrich <dan@coneharvesters.com>

	* Removed bogus "APEX" value from shutter speed display (thanks to
	  Jef Driesen for confirming this)
	* Fixed a couple of off-by-one unnecessary string truncations
	* Define M_PI for those systems that don't have it

2009-09-23  Jan Patera <patera@users.sourceforge.net>

	* po/cs.po: Updated Czech translation by Jan Patera

2009-09-18  Dan Fandrich <dan@coneharvesters.com>

	* Added support for writing Pentax and Casio v2 MakerNotes
	* Now displaying all components in Pentax and Casio v2 MakerNotes
	  when a tag has more than one

2009-09-18  Dan Fandrich <dan@coneharvesters.com>

	* po/de.po: Updated German translation by Marcus Meissner
	* po/sv.po: Updated Swedish translation by Daniel Nylander
	* po/vi.po: Updated Vietnamese translation by Clytie Siddall

2009-09-17  Dan Fandrich <dan@coneharvesters.com>

	* po/pl.po: Updated Polish translation by Jakub Bogusz

2009-09-16  Dan Fandrich <dan@coneharvesters.com>

	* po/en_CA.po: Updated Canadian English translation

2009-08-12  Lutz Mueller <lutz@users.sourceforge.com>

	Patch by Vladimir Petrov <vppetrov@mm-sol.com> plus some whitespace
        fixes by myself:

	* libexif/exif-entry.c: (exif_entry_[fix,get_value,initialize]): 
          Support EXIF_TAG_ISO_SPEED_RATINGS.

2009-06-15  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Danish translation corrections by Lars Christian Jensen

2009-06-03  Dan Fandrich <dan@coneharvesters.com>

	* po/da.po: Added Danish translation by Joe Hansen

2009-05-28  Dan Fandrich <dan@coneharvesters.com>

	* Fixed negative exposure values in Canon makernotes (bug #2797280)

2009-05-02  Dan Fandrich <dan@coneharvesters.com>

	* Added contrib/examples/write-exif.c
	* Create a valid default for EXIF_TAG_COMPONENTS_CONFIGURATION

2009-03-21  Lutz Mueller <lutz@users.sourceforge.net>

	Meder Kydyraliev <meder.k@gmail.com> suggested to add some sanity
	checks:

	* libexif/exif-data.c (exif_data_load_entry),