@@ -9,18 +9,21 @@ struct _ExifMem {
 	ExifMemFreeFunc free_func;
 };
 
+/*! Default memory allocation function. */
 static void *
 exif_mem_alloc_func (ExifLong ds)
 {
 	return calloc ((size_t) ds, 1);
 }
 
+/*! Default memory reallocation function. */
 static void *
 exif_mem_realloc_func (void *d, ExifLong ds)
 {
 	return realloc (d, (size_t) ds);
 }
 
+/*! Default memory free function. */
 static void
 exif_mem_free_func (void *d)
 {
