@@ -1,3 +1,11 @@
+2009-09-24  Dan Fandrich <dan@coneharvesters.com>
+
+	* Fixed some problems in MakerNote parsing that could cause a
+	  read past the end of a buffer and therefore a segfault.
+	* Allow MakerNote parsing to continue even if one tag parses
+	  incorrectly.
+	* Log an error whenever memory allocation fails in MakerNote parsing.
+
 2009-09-23  Dan Fandrich <dan@coneharvesters.com>
 
 	* Removed bogus "APEX" value from shutter speed display (thanks to
